--- a/ConsoleApp/appsettings.json
+++ b/ConsoleApp/appsettings.json
@@ -1,7 +1,12 @@
 {
-  "Instance": "https://login.microsoftonline.com/",
-  "ClientId": "[Enter the Client Id (Application ID obtained from the Azure portal), e.g. ba74781c2-53c2-442a-97c2-3d60re42f403]",
-  "TenantId": "[Enter 'common', or 'organizations' or the Tenant Id (Obtained from the Azure portal. Select 'Endpoints' from the 'App registrations' blade and use the GUID in any of the URLs), e.g. da41245a5-11b3-996c-00a8-4d99re19f292]",
-  "RedirectUri": "http://localhost",
-  "GraphApiUrl": "https://graph.microsoft.com/v1.0/"
+  "ConsoleApp": {
+    "Instance": "https://login.microsoftonline.com",
+    "ClientId": "40d3acd5-8d8b-4749-807e-c19e7c7ecaf0",
+    "TenantId": "f59645ca-7c1b-40fe-870d-96cd8328eb83",
+    "Secret": "04-TYr3sC0.9a.QRpG~7gi04_z1Q1.Arbj"
+  },
+  "Api": {
+    "BaseUri": "https://localhost:44304",
+    "Scope": "api://8ae21fb5-09ed-4e98-8b30-815329a91048/.default"
+  } 
 }
